feat: 🎸 added subscribed and repository details components

--- a/src/app/components/repository/repository-details/repository-details.component.html
+++ b/src/app/components/repository/repository-details/repository-details.component.html
@@ -1,1 +1,22 @@
-<p>repository-details works!</p>
+<div class="repository-details">
+    <div class="repository-details__actions">
+        <p>Pinned repositories</p>
+        <button class="btn btn-sm">Back to pinned repos</button>
+    </div>
+    <div class="repository-details__tabs">
+        <clr-tabs>
+            <clr-tab>
+                <button clrTabLink id="link1">Details</button>
+                <clr-tab-content *clrIfActive>
+                    dabadaba
+                </clr-tab-content>
+            </clr-tab>
+            <clr-tab>
+                <button clrTabLink>Commits</button>
+                <clr-tab-content *clrIfActive>
+                    yesPleazzzE
+                </clr-tab-content>
+            </clr-tab>
+        </clr-tabs>
+    </div>
+</div>
