refactor: 💡 refactored routing

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,10 +1,5 @@
 <div class="login-wrapper">
     <form class="login">
-        <!-- <section class="title">
-            <h3 class="welcome">Welcome to</h3>
-            Company Product Name
-            <h5 class="hint">Use your Company ID to sign in or create one now</h5>
-        </section> -->
         <div class="login-group">
             <clr-input-container>
                 <label class="clr-sr-only">Username</label>
@@ -14,14 +9,7 @@
                 <label class="clr-sr-only">Password</label>
                 <input type="password" name="password" clrPassword placeholder="Password"/>
             </clr-password-container>
-            <!-- <clr-checkbox-wrapper>
-                <label>Remember me</label>
-                <input type="checkbox" name="rememberMe" clrCheckbox/>
-            </clr-checkbox-wrapper>
-            <div class="error active">
-                Invalid user name or password
-            </div> -->
-            <button type="submit" class="btn btn-primary" (ngSubmit)="this.login()">LOGIN</button>
+            <button class="btn btn-primary" (click)="this.login()">LOGIN</button>
         </div>
     </form>
 </div>
