--- a/src/app/components/repository/repository-list/repository-list.component.html
+++ b/src/app/components/repository/repository-list/repository-list.component.html
@@ -1,19 +1,42 @@
-<clr-datagrid>
-    <clr-dg-column>Name</clr-dg-column>
-    <clr-dg-column>License</clr-dg-column>
-    <clr-dg-column>Commits</clr-dg-column>
-    <clr-dg-column>Contributors</clr-dg-column>
-    <clr-dg-column>Releases</clr-dg-column>
-    <clr-dg-column>Branches</clr-dg-column>
+<div class="repository-list">
+    <div class="repository-list__pinned-repos-datagrid">
+        <p>Pinned repositories</p>
+        <clr-datagrid>
+            <clr-dg-column
+                [clrDgField]="'name'">Name
+            </clr-dg-column>
+            <clr-dg-column
+                [clrDgField]="'license'">License
+            </clr-dg-column>
+            <clr-dg-column
+                [clrDgField]="'commits'">Commits
+            </clr-dg-column>
+            <clr-dg-column
+                [clrDgField]="'contributors'">Contributors
+            </clr-dg-column>
+            <clr-dg-column
+                [clrDgField]="'releases'">Releases
+            </clr-dg-column>
+            <clr-dg-column
+                [clrDgField]="'branches'">Branches
+            </clr-dg-column>
 
-    <clr-dg-row *ngFor="let repository of repositories">
-        <clr-dg-cell>{{repository.name}}</clr-dg-cell>
-        <clr-dg-cell>{{repository.license}}</clr-dg-cell>
-        <clr-dg-cell>{{repository.commits}}</clr-dg-cell>
-        <clr-dg-cell>{{repository.contributors}}</clr-dg-cell>
-        <clr-dg-cell>{{repository.releases}}</clr-dg-cell>
-        <clr-dg-cell>{{repository.branches}}</clr-dg-cell>
-    </clr-dg-row>
+            <clr-dg-row 
+                *clrDgItems="let repository of repositories"
+                (click)=handleRowClick(repository)>
+                    <clr-dg-cell>{{repository.name}}</clr-dg-cell>
+                    <clr-dg-cell>{{repository.license}}</clr-dg-cell>
+                    <clr-dg-cell>{{repository.commits}}</clr-dg-cell>
+                    <clr-dg-cell>{{repository.contributors}}</clr-dg-cell>
+                    <clr-dg-cell>{{repository.releases}}</clr-dg-cell>
+                    <clr-dg-cell>{{repository.branches}}</clr-dg-cell>
+            </clr-dg-row>
 
-    <clr-dg-footer>{{repositories.length}} repository</clr-dg-footer>
-</clr-datagrid>
+            <clr-dg-footer>
+                <clr-dg-pagination #pagination [clrDgPageSize]="10">
+                    <clr-dg-page-size [clrPageSizeOptions]="[10,20,50,100]">Repos per page</clr-dg-page-size>
+                </clr-dg-pagination>
+            </clr-dg-footer>
+        </clr-datagrid>
+    </div>
+</div>
