--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,13 +1,13 @@
 <div class="login-wrapper">
-    <form class="login">
+    <form clrForm [formGroup]="loginForm" class="login">
         <div class="login-group">
             <clr-input-container>
                 <label class="clr-sr-only">Username</label>
-                <input type="text" name="username" clrInput placeholder="Username"/>
+                <input formControlName="username" type="text" name="username" clrInput placeholder="Username"/>
             </clr-input-container>
             <clr-password-container>
                 <label class="clr-sr-only">Password</label>
-                <input type="password" name="password" clrPassword placeholder="Password"/>
+                <input formControlName="password" type="password" name="password" clrPassword placeholder="Password"/>
             </clr-password-container>
             <button class="btn btn-primary" (click)="this.login()">LOGIN</button>
         </div>
