--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,16 +1,22 @@
 <div class="header-component">
+
     <header class="header-6">
         <div class="branding">
-            <a href="javascript://" class="nav-link">
+            <a href="..." class="nav-link">
                 <clr-icon shape="vm-bug"></clr-icon>
                 <span class="title">Project Clarity</span>
             </a>
         </div>
         <div class="header-actions">
-            <a href="javascript://" class="nav-link nav-icon-text">
-                <clr-icon shape="user"></clr-icon>
-                <span class="nav-text">username</span>
-            </a>
+            <clr-dropdown>
+                <button class="nav-text" clrDropdownTrigger aria-label="open user profile">
+                    {{ username }}
+                    <clr-icon shape="caret down"></clr-icon>
+                </button>
+                <clr-dropdown-menu *clrIfOpen clrPosition="bottom-right">
+                    <a (click)=logout() clrDropdownItem>Log out</a>
+                </clr-dropdown-menu>
+            </clr-dropdown>
         </div>
     </header>
     <router-outlet></router-outlet>
