--- a/src/app/components/repository/repository-list/repository-list.component.scss
+++ b/src/app/components/repository/repository-list/repository-list.component.scss
@@ -6,4 +6,8 @@ $module: 'repository-list';
         margin: 1.2rem;
         height: inherit;
     }
+
+    .label {
+        margin: 0.1rem;
+    }
 }
