feat: 🎸 added commit listing, download and licence tooltips

--- a/src/app/components/repository/repository-details/repository-details.component.html
+++ b/src/app/components/repository/repository-details/repository-details.component.html
@@ -1,7 +1,8 @@
 <div class="repository-details">
     <div class="repository-details__actions">
-        <p>{{ repositoryData.name }}<p>
-        <button class="btn btn-sm" (click)=handleBack()>Back to pinned repos</button>
+        <p>{{ repositoryData?.name }}
+        </p>
+            <button class="btn btn-sm" (click)=handleBack()>Back to pinned repos</button>
     </div>
     <div class="repository-details__tabs">
         <clr-tabs>
@@ -13,8 +14,10 @@
                             {{repositoryData.name}} Readme
                         </div>
                         <div class="card-block">
-                            <div class="card-text" *ngIf="repositoryData?.readmeMd"[innerHTML]="repositoryData.readmeMd | marked"></div>
-                            <div class="card-text" *ngIf="repositoryData?.readmeRst"[innerHTML]="repositoryData.readmeRst | restructured"></div>
+                            <div class="card-text" *ngIf="repositoryData?.readmeMd"
+                                [innerHTML]="repositoryData.readmeMd | marked"></div>
+                            <div class="card-text" *ngIf="repositoryData?.readmeRst"
+                                [innerHTML]="repositoryData.readmeRst | restructured"></div>
                         </div>
                     </div>
 
@@ -24,31 +27,27 @@
                 <button clrTabLink>Commits</button>
                 <clr-tab-content *clrIfActive>
                     <clr-datagrid>
-                        <clr-dg-column
-                            [clrDgField]="'comment'">Comment
+                        <clr-dg-column [clrDgField]="'comment'">Comment
                         </clr-dg-column>
-                        <clr-dg-column
-                            [clrDgField]="'Date'">Date
+                        <clr-dg-column [clrDgField]="'Date'">Date
                         </clr-dg-column>
-                        <clr-dg-column
-                            [clrDgField]="'Contributor'">Contributor
+                        <clr-dg-column [clrDgField]="'Contributor'">Contributor
                         </clr-dg-column>
-                        <clr-dg-column
-                            [clrDgField]="'Download patch'">Download patch
+                        <clr-dg-column [clrDgField]="'Download patch'">Download patch
                         </clr-dg-column>
-                        <clr-dg-row 
-                            *clrDgItems="let commit of repositoryData.commits">
-                                <clr-dg-cell>{{commit?.message}}</clr-dg-cell>
-                                <clr-dg-cell>{{commit?.date}}</clr-dg-cell>
-                                <clr-dg-cell>{{commit?.contributor}}</clr-dg-cell>
-                                <clr-dg-cell>
-                                    <button class="btn btn-sm" (click)=handleDownloadPatch(commit.resourcePath)>Download Patch</button>
-                                </clr-dg-cell>
+                        <clr-dg-row *clrDgItems="let commit of repositoryData.commits">
+                            <clr-dg-cell>{{commit?.message}}</clr-dg-cell>
+                            <clr-dg-cell>{{(commit?.date | date:'medium') || "unknown"}}</clr-dg-cell>
+                            <clr-dg-cell>{{commit?.contributor}}</clr-dg-cell>
+                            <clr-dg-cell>
+                                    <button class="btn btn-sm" (click)=handleDownloadPatch(commit.sha)>Download</button>
+                            </clr-dg-cell>
                         </clr-dg-row>
-            
+
                         <clr-dg-footer>
                             <clr-dg-pagination #pagination [clrDgPageSize]="10">
-                                <clr-dg-page-size [clrPageSizeOptions]="[10,20,50,100]">Commits per page</clr-dg-page-size>
+                                <clr-dg-page-size [clrPageSizeOptions]="[10,20,50,100]">Commits per page
+                                </clr-dg-page-size>
                             </clr-dg-pagination>
                         </clr-dg-footer>
                     </clr-datagrid>
