--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,9 +2,9 @@
 
     <header class="header-6">
         <div class="branding">
-            <a href="..." class="nav-link">
+            <a>
                 <clr-icon shape="vm-bug"></clr-icon>
-                <span class="title">Project Clarity</span>
+                <span class="title">Project VMhub</span>
             </a>
         </div>
         <div class="header-actions">
