feat: 🎸 inited a semi working spinner

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <div class="app-component">
+    <app-spinner *ngIf="spinnerService.isVisible$ | async"></app-spinner>
     <router-outlet></router-outlet>
 </div>
