--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -19,5 +19,6 @@
             </clr-dropdown>
         </div>
     </header>
+    <app-spinner *ngIf="spinnerService.isVisible$ | async"></app-spinner>
     <router-outlet></router-outlet>
 </div>
