--- a/src/app/components/repository/repository-list/repository-list.component.html
+++ b/src/app/components/repository/repository-list/repository-list.component.html
@@ -4,11 +4,11 @@
         <clr-datagrid [clrDgLoading]="loading">
             <clr-dg-column [clrDgField]="'name'">Name
             </clr-dg-column>
-            <clr-dg-column [clrDgField]="'license'">License
+            <clr-dg-column [clrDgField]="'license.name'">License
             </clr-dg-column>
-            <clr-dg-column [clrDgField]="'commits'">Commits
+            <clr-dg-column [clrDgField]="'commitsCount'">Commits
             </clr-dg-column>
-            <clr-dg-column [clrDgField]="'contributors'">Contributors
+            <clr-dg-column>Contributors
             </clr-dg-column>
             <clr-dg-column [clrDgField]="'releases'">Releases
             </clr-dg-column>
