test: 💍 added some tests

--- a/src/app/components/repository/repository-details/repository-details.component.html
+++ b/src/app/components/repository/repository-details/repository-details.component.html
@@ -7,7 +7,7 @@
     <div class="repository-details__tabs">
         <clr-tabs>
             <clr-tab>
-                <button clrTabLink id="link1">Details</button>
+                <button clrTabLink>Details</button>
                 <clr-tab-content *clrIfActive>
                     <div class="card">
                         <div class="card-header">Readme</div>
